# argocd-demo-app

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: master.yml  rust.yml  tag.yml  tags.yml
k8s/: deploy.yaml  ns.yaml
locust/: Dockerfile  Pipfile  call.py
src/: main.rs
