[package]
name = "argocd-demo-app"
version = "1.0.0"
authors = ["John Sigvald Skauge <johnsigvaldskauge@tv2.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rand = "0.8.3"
rocket = "0.4.7"
rocket_prometheus = "0.7.0"
