[package]
name = "argocd-demo-app"
version = "1.0.1"
authors = ["John Sigvald Skauge <johnsigvaldskauge@tv2.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.8.3"
log = "0.4.14"
once_cell = "1.7.2"
rand = "0.8.3"
rocket = "0.4.7"
rocket_prometheus = "0.7.0"
